src/kubernetes/core/longhorn/manifests/ingress.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  parentRefs:
  - name: nginx
    namespace: nginx-gateway
  hostnames:
  - longhorn.valhallahub.nl
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: longhorn-frontend
      port: 80
